kubernetes changes and changes in docker file